<resources>
    <string name="app_name">Notes</string>
    <string name="title_hint">Title</string>
    <string name="add_new_note">+</string>
    <string name="date_format">yyyy-MM-dd hh:mm</string>
    <string name="hint_note">Input here your note</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="view">List/Cards</string>
    <string name="dialog">Dialog/Window</string>
    <string name="share">Share</string>
    <string name="add_link">Add link</string>
    <string name="add_photo">Add photo</string>
    <string name="note_tag">Tag</string>
    <string name="note_date">Date</string>
    <string name="settings">Settings</string>
    <string name="tags">Tags</string>
    <string name="notes_icon">NotesIcon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_font_size">Font size</string>
    <string name="set_big">Big</string>
    <string name="set_medium">Medium</string>
    <string name="set_small">Small</string>
    <string name="set_sort_by">Sort by</string>
    <string name="set_creation_date">Creation date</string>
    <string name="set_modification_date">Modification date</string>
    <string name="delete_all">Clear all</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="favorite">Favorite</string>
    <string name="description">Description</string>
    <string name="tag">Tag</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="add_note">Add note</string>
    <string name="save_note">Save note</string>
    <string name="continue_">Продолжить...</string>
    <string name="facebook_app_id">463476831587838</string>
    <string name="fb_login_protocol_scheme">fb463476831587838</string>
    <string name="alert_delete">Delete note?</string>
    <string name="alert_delete_title">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="alert_clear_title">Clear</string>
    <string name="alert_clear">Clear all notes?</string>

</resources>